fix GET /employee/advertisements(try-2)